--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,10 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'android.arch.lifecycle:extensions:1.0.0-alpha1';
+    compile 'android.arch.persistence.room:runtime:1.0.0-alpha1';
     testCompile 'junit:junit:4.12'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha1';
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha1';
 }
